# phishingDetectionDiscord

./: Cargo.toml
src/: main.rs
src/bot/: bot.rs  handler.rs  mod.rs
src/metric/: mod.rs
src/rest/: mod.rs  safebrowsing.rs
