[package]
name = "phishing_detection_discord"
version = "0.1.0"
authors = ["Lypt0x <2xlyptox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.9"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies]
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.129"
serde_json = "1.0.66"