[package]
name = "phishing_detection_discord"
version = "0.1.0"
authors = ["Lypt0x <2xlyptox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies]
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
linkify = "0.7.0"
lazy_static = "1.4.0"
serde = "1.0.129"
serde_json = "1.0.66"
reqwest = "0.11.4"
futures = "0.3.16"