[package]
name = "phishing_detection_discord"
version = "0.1.0"
authors = ["Lypt0x <2xlyptox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies]

#url parsing
linkify = "0.7.0"
url = "2.2.2"

#de-/serialization stuff
lazy_static = "1.4.0"
serde = "1.0.129"
serde_json = "1.0.66"

#networking and concurrency
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.4"
tokio-stream = "0.1.7"

#metrics
prometheus = "0.12.0"